--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -13,9 +13,9 @@
             <div class="col-12 col-md-6 col-lg-3 mt-2">
                 <h6 class="title font-bold">{% trans 'Información de Contacto' %}</h6>
                 {% if LANGUAGE_CODE == 'en' %}
-                <p>{{ general_configuracion.horarios_de_atencion_en|safe }}</p>
+                    <p>{{ general_configuracion.horarios_de_atencion_en|safe }}</p>
                 {% else %}
-                <p>{{ general_configuracion.horarios_de_atencion|safe }}</p>
+                    <p>{{ general_configuracion.horarios_de_atencion|safe }}</p>
                 {% endif %}
                 <p>{{ general_configuracion.numeros_contacto|safe }}</p>
                 <p>{{ general_configuracion.correos_contacto|safe }}</p>
@@ -89,17 +89,20 @@
                                 {% if LANGUAGE_CODE != 'en' %}
                                     <div class="options text-center mt-1 texto-legal">
                                         {% blocktrans %}
-                                        ODECOPACK SAS le informa que los datos personales que se recolectan
-                                        a través de este formulario serán tratados de manera segura y confiable de
-                                        acuerdo
-                                        con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.
+                                            ODECOPACK SAS le informa que los datos personales que se recolectan
+                                            a través de este formulario serán tratados de manera segura y confiable de
+                                            acuerdo
+                                            con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de
+                                            Datos.
                                         {% endblocktrans %}
                                         <p>
                                             {% blocktrans %}
-                                            En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de
-                                            datos por favor envíe su solicitud al correo: protecciondatos@odecopack.com
-                                            , o comuníquese al
-                                            teléfono: 4856565
+                                                En caso de que desee RETIRAR o MODIFICAR su información de nuestras
+                                                bases de
+                                                datos por favor envíe su solicitud al correo:
+                                                protecciondatos@odecopack.com
+                                                , o comuníquese al
+                                                teléfono: 4856565
                                             {% endblocktrans %}
                                         </p>
                                         <div class="text-center">
