--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -24,7 +24,8 @@
                                 <iframe
                                         class="embed-responsive-item p-0"
                                         title="video_constitucional"
-                                        data-src="{{ empresa_configuracion.video }}?rel=0&amp;showinfo=0" frameborder="0"
+                                        data-src="{{ empresa_configuracion.video }}?rel=0&amp;showinfo=0"
+                                        frameborder="0"
                                         allowfullscreen></iframe>
                             </div>
                         </div>
@@ -48,13 +49,13 @@
                 <div class="contenido">
                     {% if LANGUAGE_CODE == 'en' %}
                         {% if empresa_configuracion.imagen_info_empresa_en %}
-                            <img class="img-fluid" data-src="{{empresa_configuracion.imagen_info_empresa_en.url}}"
-                             alt="Image About Company">
+                            <img class="img-fluid" data-src="{{ empresa_configuracion.imagen_info_empresa_en.url }}"
+                                 alt="Image About Company">
                         {% endif %}
                     {% else %}
                         {% if empresa_configuracion.imagen_info_empresa %}
-                            <img class="img-fluid" data-src="{{empresa_configuracion.imagen_info_empresa.url}}"
-                             alt="Imagen Datos Empresa">
+                            <img class="img-fluid" data-src="{{ empresa_configuracion.imagen_info_empresa.url }}"
+                                 alt="Imagen Datos Empresa">
                         {% endif %}
                     {% endif %}
                 </div>
