Fix a bad name in image when using english

--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -207,8 +207,8 @@
                                                     <div class="caption">
                                                         <h3>
                                                             {% if LANGUAGE_CODE == 'en' %}
-                                                                {% if item.nombre_eng %}
-                                                                    {{ item.nombre_eng }}
+                                                                {% if item.nombre_en %}
+                                                                    {{ item.nombre_en }}
                                                                 {% else %}
                                                                     {{ item.nombre }}
                                                                 {% endif %}
